[metadata]
name = mapbuffer
url = https://github.com/seung-lab/mapbuffer/
summary = Serializable map of integers to bytes with near zero parsing.
description_content_type = text/markdown
description_file = README.md
author = William Silversmith
author_email = ws9@princeton.edu
home_page = https://github.com/seung-lab/mapbuffer/
license = License :: OSI Approved :: BSD License
classifier =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[global]
setup_hooks = pbr.hooks.setup_hook

[files]
packages = 
    mapbuffer
